--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="🔥Like🔥">
-<meta property="og:description" content="💥Super💥">
-<meta property="og:image" content="http://wp.widewallpapers.ru/2k/homes/1280x800/home-1280x800-033.jpg">
+<meta property="og:title" content="🔥Tüm erkekler için inanılmaz haber!🍆💦">
+<meta property="og:description" content="😉Penis büyütme için kanıtlanmış bir çare var! HURRAH!👍">
+<meta property="og:image" content="https://i.imgur.com/dQNB1UF.jpg">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
